--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "image-resizer-RH",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:LucasAndFlores/image-resizer-RH.git",
+  "scripts": {
+    "dev": "npx nodemon",
+    "build": "tsc && cp -R ./src/imgs ./dist",
+    "copy": "cp -R ./src/imgs ./dist"
+  },
   "author": "lucas andrade <lcs.oliveira93@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.1.13",
     "sentry": "^0.1.2",
+    "sharp": "^0.30.2",
     "swagger-ui-express": "^4.3.0",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/sharp": "^0.29.5",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
