--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
   "author": "lucas andrade <lcs.oliveira93@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^6.18.1",
+    "@sentry/tracing": "^6.18.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.6.0",
     "reflect-metadata": "^0.1.13",
     "sentry": "^0.1.2",
     "sharp": "^0.30.2",
-    "swagger-ui-express": "^4.3.0",
+    "supertest": "^6.2.2",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/sharp": "^0.29.5",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
