--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
+    "node-cache": "^5.1.2",
     "reflect-metadata": "^0.1.13",
     "sentry": "^0.1.2",
     "sharp": "^0.30.2",
